# actixweb-microservices

./: Cargo.toml  Dockerfile  DockerfileMicro  DockerfileWebsocket  README.md  docker-compose.yml  test.js
common-lib/: Cargo.toml
common-lib/src/: lib.rs  provider.rs
common-lib/src/error/: common_error.rs
common-lib/src/provider/: redis.rs  redis_keys.rs  redis_sync.rs
micro/: Cargo.toml
micro-rust/: Cargo.toml  README.md
micro-rust/src/: config.rs  lib.rs  main.rs  routes.rs
micro-rust/src/common/: dto.rs
micro-rust/src/config/: error.rs
micro-rust/src/controller/rate_controller/: rate.rs
micro-rust/src/routes/: error_test_routes.rs
micro-rust/src/routes/error_test_routes/: error_test.rs
micro-rust/src/routes/rate_routes/: rate.rs
micro-rust/test/http/: rate_routes.http
micro/src/: common.rs  config.rs  lib.rs  main.rs  routes.rs  schedule.rs
micro/src/common/: dto.rs  jwt.rs  redis.rs  response.rs
micro/src/config/: bearer_handler.rs  error_handler.rs  main_config.rs
micro/src/routes/: admin_routes.rs  auth_routes.rs  error_test_routes.rs  rate_routes.rs
micro/src/routes/admin_routes/: admin.rs
micro/src/routes/auth_routes/: auth.rs
micro/src/routes/error_test_routes/: error_test.rs
micro/src/routes/rate_routes/: rate.rs  rate_service.rs
micro/src/schedule/: rate_schedule.rs
micro/test/http/: admin.http  auth_routes.http  error_test_routes.http  rate_routes.http
resources/: README.md  cert.pem  key.pem
src/: common.rs  controller.rs  lib.rs  main.rs  routes.rs
src/common/: response.rs
src/controller/: rate_controller.rs
src/controller/rate_controller/: rate.rs  rate_service.rs
src/routes/: rate_routes.rs
src/routes/rate_routes/: rate.rs
src/utils/: date.rs
test/http/: rate_routes.http
websocket/: Cargo.toml
websocket-rust/: Cargo.toml
websocket-rust/src/: config.rs  main.rs
websocket/src/: lib.rs  main.rs  service.rs
websocket/src/actor/: websocket.rs
websocket/src/config/: main_config.rs
websocket/src/service/: rate_service.rs
