[package]
name = "micro-rust"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Ielpo <alberto@ielpo.net>"]

[dependencies]
actix-web = "4"
derive-new = "0.5"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6.4"
actix-http = "3.4"
# utils
fastrand = "2"

# sse
#reqwest-eventsource = "0.5"
actix-web-lab = "0.20"
#parking_lot = "0.12.1"
#futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
#time = { version = "0.3", features = ["formatting"] }
tokio = { version = "1.18.5", features = ["full"] }