[package]
name = "micro-rust"
version = "0.1.0"
edition = "2021"
authors = ["Alberto Ielpo <alberto@ielpo.net>"]

[dependencies]
actix-web = "4"
derive-new = "0.5"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6"
actix-http = "3.4"
lazy_static = "1.4"

# utils
fastrand = "2"

# sse
actix-web-lab = "0.20"
tokio = { version = "1.18.5", features = ["full"] }

# internal
common-lib = { path = "../common-lib" }