[package]
name = "micro"
version = "1.0.4"
edition = "2021"
authors = ["Alberto Ielpo <alberto@ielpo.net>"]

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
#actix-web = "4"
derive-new = "0.6"
derive_more = "0.99"
env_logger = "0.10"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
actix-cors = "0.6"
actix-http = "3.4"
lazy_static = "1.4"

# ssl
# make sure to have openssl pkg-config libssl-dev installed
openssl = { version = "0.10", features = ["vendored"] }

# jwt
hmac = "0.12"
sha2 = "0.10"
actix-web-httpauth = "0.8"

# utils
fastrand = "2"
jwt = "0.16"

# sse
actix-web-lab = "0.20"
tokio = { version = "1.18.5", features = ["full"] }

bb8-redis = "0.14"

# internal
common-lib = { path = "../common-lib" }