[package]
name = "websocket"
version = "1.0.3"
edition = "2021"
authors = ["Alberto Ielpo <alberto@ielpo.net>"]

[dependencies]
actix-web = "4"
env_logger = "0.10"
log = "0.4"
actix-web-actors = "4"
actix = "0.13"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# utils
fastrand = "2"